--- a/ghi/src/App.css
+++ b/ghi/src/App.css
@@ -12,3 +12,10 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+.id-tag {
+  margin: 5px;
+  padding: 5px;
+  background-color: #96b5de;
+  border-radius: 7px;
+}
