--- a/ghi/src/Messages/styles.css
+++ b/ghi/src/Messages/styles.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     display:flex;
     flex-direction: column;
     height: 100vh;
@@ -24,7 +24,7 @@
 }
 
 .inbox-cards {
-    /* display:flex; */
+
     margin-right: .5in;
     margin-left: -.5in;
 }
@@ -40,4 +40,35 @@
 .inbox-card {
     flex: 1 0 700px;
     margin: 0 5px;
+} */
+
+
+.initial-container {
+    display:grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-rows: 20% 20% 20% 20% 20%;
+}
+
+.loaded-container {
+    display:grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-rows: 20% 20% 20% 20% 20%;
+}
+
+.inbox-cards {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1.75;
+}
+
+.inbox-form {
+    grid-column-start: 3;
+    grid-column-end: 6;
+    grid-row-start: 2;
+}
+
+.inbox-message {
+    grid-column-start: 3;
+    grid-column-end: 6;
+    grid-row-start: 1;
 }
